# IBM-Z-Datathon-2025

./: README.md
CareerSightAI-1/CareerSightAI-1/: careersight  careersight.md  init_db.py
CareerSightAI-1/CareerSightAI-1/attached_assets/: Pasted-CareerSight-AI-is-a-rapid-development-AI-powered-career-intelligence-platform-built-to-guide-users--1760213996901_1760213996902.txt
CareerSightAI-1/CareerSightAI-1/utils/: database.py  email_notifications.py  gemini_integration.py  market_insights.py
CareerSight_AI_Jupyter Notebook Files/: cell10_launch_server.py  cell1_install_imports.py  cell2_gemini_config.py  cell3_data_processing.py  cell4_load_process.py  cell5_recommendation_engine.py  cell6_user_session.py  cell7_flask_setup.py  cell8_routes_core.py  cell9_routes_extra.py
Jupyter IBM/: README.md  main.py  pyproject.toml  requirements.txt
